# car-repair-shop

./: .gitignore  README.md
.github/workflows/: django.yml
src/: .env.example  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  settings.py
src/doc/: black_setup.md  database_structure.md  git_workflow.md
src/domain/: admin.py  context_processors.py  decorators.py  urls.py
src/domain/fixtures/: customer.json  person.json  test_person_user.json
src/domain/forms/: __init__.py  customer.py  person.py
src/domain/migrations/: 0001_initial.py  0002_create_superuser.py  0003_customer.py  0004_payments_details.py  0005_payments.py  0006_payments_items.py  0007_payment_paymentsitem_remove_payments_items_payment_and_more.py  0008_rename_jib_customer_jib_rename_pib_customer_pib_and_more.py  0009_rename_created_at_paymentsdetail_created_and_more.py  0010_alter_person_user.py  0011_paymentsitem_content_item.py  0012_payment_vehicle_payment_vehicle_plate_number.py  0013_alter_payment_bill_id.py  0014_payment_submitted_payment.py
src/domain/models/: __init__.py  customer.py  payments.py  payments_details.py  payments_items.py  person.py
src/domain/templates/domain/: 403.html  404.html  500.html  base.html  customer.html  customer_create.html  customer_delete.html  customers.html  home.html  index.html  invoice.html  invoice_print.html  login.html  order.html  order_create.html  orders.html  person.html  person_create.html  person_delete.html  persons.html
src/domain/views/: __init__.py  auth.py  base.py  customer.py  error.py  orders.py  person.py
src/src/: settings.py  urls.py
src/tests/: fixture_builder.py  helpers.py
src/tests/auth/: test_urls.py  test_views.py
src/tests/base/: test_urls.py  test_views.py
src/tests/customer/: test_forms.py  test_urls.py  test_views.py
src/tests/person/: test_forms.py  test_urls.py  test_views.py
